docs/specs/conversation-store-db/v3/spec.md
# 這份文件怎麼讀

這一輪把對話的儲存從「一段對話一個 JSON 檔」換成資料庫（**第一版，不搬遷舊資料**），歷史清單改成**直接跟著儲存的變動走**，並讓 `history-missing-after-switch` 那個 bug（回覆還在生成時切換，被切走的那段暫時從歷史清單與搜尋消失）從結構上消失。那個 bug 的正確行為與重現案例已吸收進本規格（對照在 `spec-appendix.md`／「吸收 history-missing-after-switch 的對照」）。

- **只想知道這是什麼** → 讀「功能總覽」。
- **QA** → 讀本檔的「行為規格」與 `spec-tasks.md`。行為規格不談任何實作手段。
- **RD** → 讀「功能總覽」最後的「這次會踩到的既有事實」、行為規格、`spec-architecture.md`（**全部是建議**）、`spec-tasks.md`。
- **使用者** → 開 `spec-decisions.md`：**目前沒有需要決策的事項**（D1–D4 已於 2026-09-17 拍板，記錄在 `spec-appendix.md`／決策歷程）。v3 有幾項 PM 自己做的判斷列在那裡，可以推翻。
- **想知道為什麼** → `spec-appendix.md`（含「資料庫能不能在 JVM 測試裡跑」的實測紀錄）。
- **這一版（v3）改了什麼、這一輪要做哪些** → slug 根目錄（本目錄的上一層）的 `changes-v3.md`。v3 是 v2 驗收之後的修訂：**新增 §5.4（儲存開不起來、但內容不一定壞了）**，§5.1 不再涵蓋「打不開」；§2.2 的「第一列」改成「打開抽屜不必捲動就看得到」；回歸驗證加上「串流中切換模型不閃退」與「停止後立刻再說話」；`stop-generation` 仍然不重跑（使用者再次裁決）。

## 檔案地圖

| 檔案 | 裝什麼 | 主要讀者 |
|---|---|---|
| `spec.md`（本檔，入口） | 這份文件怎麼讀、功能總覽、**行為規格 §1–§5** | 所有人；QA 判 pass/fail 的主要依據 |
| `spec-architecture.md` | 架構決策 —— **全部是給 RD 的建議，QA 不驗** | RD |
| `spec-tasks.md` | **任務 1–9 與驗收標準**、明確不做 | RD 與 QA |
| `spec-decisions.md` | **需要你決策的事項**（只放還沒拍板的） | 使用者 |
| `spec-appendix.md` | JVM 查證紀錄、跨輪衝突清單、吸收對照、決策歷程、已知取捨、參考資料、修訂記錄 | 想知道「為什麼會變成這樣」的人 |

**別的文件指向本規格時**，照專案慣例寫成 `docs/specs/conversation-store-db/<檔名> §節號「節名」`，不寫版號目錄。本規格內部的跨檔引用寫裸檔名。

## 代號索引

| 代號 | 一句話 |
|---|---|
| **§1** | 存下來的對話：存什麼、讀回什麼、什麼時候消失、一次存檔是整筆的 |
| **§2** | 歷史清單跟著儲存走：清單＝儲存裡的所有對話扣掉開著的那段，隨時跟著變 |
| **§3** | 儲存不是唯一的來源：還沒存下的對話與生成中的回覆仍然搜得到 |
| **§4** | 舊資料：不搬遷，舊版的 JSON 檔在啟動時刪掉 |
| **§5** | 儲存壞掉、開不起來或寫不進去時，使用者看到什麼、還能做什麼 |
| **§5.4** | （v3 新增）儲存開不起來、但內容不一定壞了：**不刪**、告知、下次啟動再試 |
| **D1** | 已拍板：**資料庫層不寫自動化測試**（使用者開的新例外）；從資料庫層拆出來的純邏輯照常用 JUnit 測。見 `spec-tasks.md`「明確不做」 |
| **D2** | 已拍板：**測資分兩條路** —— App 做得出來的用正常操作建立、測完從 App 裡刪；App 做不出來的直接改資料庫檔。見 `spec-tasks.md`「測資與讀取的約定」 |
| **D3** | 已拍板：**儲存整份讀不起來時，告知一次後重新開始**，壞掉的那份不保留（§5.1）。**（v3）只適用於內容本身壞了**；開不起來但內容不一定壞了，走 §5.4 |
| **D4** | 已拍板：**不回頭改另兩份規格**；它們下一次被修訂時，以 `docs/product/features.md` 與 `plan/architecture.html` 為準。`stop-generation` 本輪不重跑 |
| **Room** | 使用者指定的資料庫程式庫（`spec-architecture.md` §I） |
| **舊位置** | 舊版存對話的地方：App 私有檔案目錄底下的 `conversations/` 子目錄，一段對話一個 `.json` 檔。這是既有程式的事實，不是給 RD 的指定 |
| **H1–H4** | 外部代號：`history-missing-after-switch` v1 的四條正確行為。本規格的 §1.4、§1.5、§1.6、§2.2 吸收了它們 |
| **T1** | 外部代號：「`ChatViewModel` 的相依改成可從外面給」。**本輪不做，也不假設它會先做** |

---

# 功能總覽

## 使用者看到什麼

- **升級到這一版後第一次打開 App**：歷史抽屜是空的（「還沒有其他對話。」）。**舊版存下的對話不會帶過來，而且會從手機上刪掉。** 畫面是一段新的對話，人格與模型是上次用的那個；已經解壓過的模型不必重新解壓。
- **之後一切照舊**：對話自動存、關掉再開還在、從抽屜刪掉就是真的刪掉、一句話都沒說過的對話不留下。
- **感受得到的差別只有一處**：回覆還在一個字一個字出來的時候切換（換人、換模型、開新對話、開另一段），**被切走的那段一打開抽屜就在清單上，也搜得到** —— 不再有「暫時不見、要等下一次別的動作才回來」。
- **儲存出問題時**：App 不閃退、仍然可以聊天，畫面上會告訴你發生了什麼。整份讀不起來時，App 告訴你「之前的對話紀錄讀不出來，已經清空，從這裡重新開始。」，之後的對話照常存。**（v3）紀錄只是暫時開不起來時（例如檔案權限不對），App 不會刪掉它**，而是告訴你「目前讀不到之前的對話紀錄（紀錄沒有被刪除），這段期間的對話也可能存不下來。」，下次啟動再試。

## 系統被切成哪幾塊

| 這一塊 | 負責回答什麼問題 | 邊界 |
|---|---|---|
| **對話儲存**（改寫，Room） | 存下來的對話有哪些、每一段長什麼樣；一次存檔整筆生效；存下來的東西一有變動就通知 | 只知道存下來的東西。不知道哪一段開著、不知道生成中的回覆；**沒有搜尋或比對能力** |
| **歷史清單的組合**（新） | 抽屜上該列哪些對話 ＝ 儲存裡的所有對話 − 開著的那段；兩者任一變動就重算 | 不碰畫面、不碰引擎 |
| **聊天狀態**（既有） | 開著哪一段、那一段此刻的內容（含還沒存的訊息與生成中的回覆）、什麼時候存 | **存檔的時機本輪不要求改動** |
| **搜尋**（既有，不改） | 在「開著的那段 ＋ 歷史清單」上比對 | 不讀儲存；規則全在 `docs/specs/conversation-search/` |
| **舊資料清理**（新） | 啟動時把舊位置整個刪掉 | 只碰舊位置；不讀內容、不搬 |
| **儲存故障的呈現**（新） | 儲存開不起來、或寫不進去時，告訴使用者，並讓 App 繼續可用 | 內容讀不起來時：告知一次、丟掉壞的那份、重新開始（D3）；開不起來但內容不一定壞了時：不丟、告知（§5.4） |

## 資料怎麼從一塊流到另一塊

```
使用者送出 / 停止 / 切換
  → 聊天狀態更新記憶體裡開著的那段
  → （既有的時機）交給對話儲存
  → 對話儲存整筆寫入 → 發出「有變動」
  → 歷史清單的組合：最新的全部對話 − 開著的那段
  → 抽屜拿到新清單；搜尋拿「開著的那段（記憶體）＋ 歷史清單」去比對
     （同一段兩邊都有時留記憶體那份 —— conversation-search §3.5）

App 啟動
  → 舊資料清理（刪舊位置）
  → 打開對話儲存（內容壞了 → §5.1；開不起來但內容不一定壞了 → §5.4）
  → 讀「上次停在哪」→ 儲存裡找得到就接續；找不到就用記住的人格與模型開新的
```

**反方向沒有任何一條線**：搜尋與清單都不會回頭改儲存。

## 這次會踩到的既有事實

每一條都寫了它為什麼影響這次要做的事。系統層級的描述在 `plan/architecture.html`，這裡不重複。

1. **模型檔跟舊位置在同一個 App 檔案目錄底下。** 解壓出來的模型（每個數百 MB 到 1 GB）、解壓到一半的暫存檔、系統自己寫的標記檔，都直接放在 App 的檔案目錄裡，舊位置只是其中一個子目錄。→ **舊資料清理刪錯一層，使用者下次要重新等 GB 級的解壓**（§4.2）。
2. **回覆還在生成時切換，同一段對話會被存兩次、內容相同、幾乎同時。** 停止會存一次「被停止的那段」，切換入口自己又存一次當下那段。兩條都受另兩份規格保護（`stop-generation` R5／R10、`conversation-search` 的「明確不做」裡「不改什麼時候寫檔」那條）。→ 新儲存必須讓這種並發無害（§1.4），而不是去拿掉其中一次。
3. **存一段沒有使用者訊息的對話，現行做法是刪掉它的那筆，不管那筆本來在不在。** 這是 `conversation-search` §9.1 與它的決策 J 規定的行為（外面來的只含助理訊息的對話，打開再離開就清掉）。→ 新儲存要照舊（§1.2）。
4. **讀取時，現行程式會對每一則訊息的文字（含使用者打的字）再做一次「模型輸出修復」，並把缺少模型名稱的舊紀錄釘成 Qwen。** 那是為了修復上線前就存壞的舊檔。修復會把使用者打的兩個字元 `\n` 變成換行、把前後空白去掉。→ **本輪不搬遷，這個理由消失了**；§1.1 要求讀回來與存進去逐字相同。
5. **歷史清單現在是「在某個時刻讀一次全部、寫進狀態」**，由切換、刪除、回覆收尾、停止、啟動五個地方各自觸發。這正是那個 bug 的第二個成因（兩次讀取交錯時，較早讀到的那份最後落地）。→ §2.1。
6. **「依 id 取一筆」現在是「取全部再挑」**，所以它天然與取全部一致、也天然套用壞檔容錯。→ 換成資料庫後最自然的寫法（直接依 id 查）會同時繞過這兩件事（§1.5）。
7. **一次存檔失敗，今天會讓 App 閃退。** 存檔在協程裡直接呼叫，I/O 例外沒有人接。**這是讀程式碼推出來的，沒有在裝置上實際做過。** → §5.2 要求不得閃退。
8. **「上次停在哪」記在偏好裡，不在對話儲存裡。** 升級之後它指著一段已經不存在的舊對話；現行啟動邏輯遇到「找不到」會用記住的人格與模型開一段新的。→ 升級後第一次啟動的畫面由此決定（§4.1）。
9. **Android 內建的 SQLite 介面、以及 Android 的 JSON 程式庫，在 JVM 單元測試裡都是空殼**（2026-09-16、2026-09-14 實測）。**D1 已拍板：資料庫層不寫自動化測試**，所以本輪的自動化測試只測**不碰資料庫、也不用 Android JSON 程式庫**的純邏輯。→ §1.1、§1.2、§1.5 的規則必須能在那一層被直接驅動（`spec-tasks.md` 任務 1）。實測紀錄留在 `spec-appendix.md`／「查證：資料庫能不能在 JVM 單元測試裡跑」，當作日後觸發時的起點。
10. **Room（使用者指定）預設用 Android 內建的方式開資料庫，而那種方式遇到檔案損毀時會直接把整個資料庫檔刪掉，不會通知 App**（Android 文件：`DefaultDatabaseErrorHandler`）。結構版本對不上時，Room 則是丟出錯誤。→ 刪掉本身符合 D3 的「壞掉的那份不保留」，但**使用者必須看到提示**（§5.1），預設行為不會給；結構對不上時也要走同一條路（`spec-architecture.md` §G）。
11. **另兩份規格有一批裝置端條文，可觀察物寫的是「對話目錄裡的 JSON 檔」**（檔案數、檔案位元組、「把一個檔放進對話目錄」），QA 的工具也是照 JSON 檔寫的。→ 那些條文在本輪之後照字面做不出來。**D4 已拍板：本輪不改它們**，它們下一次被修訂時以兩份全域文件為準；改寫清單在 `spec-appendix.md`／「跨輪衝突清單」。本輪的測資與讀取方式見 `spec-tasks.md`「測資與讀取的約定」（D2）。
12. **Room 在這個專案（AGP 9.3.1、內建 Kotlin 2.2.10）搭配 KSP 2.3.12 編譯得過**（2026-09-16 實測，Room 2.8.5；用 Android 內建開法與用 bundled 驅動兩種都試過）。→ 使用者指定 Room 不會卡在建置設定上。
13. **Room 看不到 App 以外對資料庫檔的修改。** 它的變動通知只涵蓋經由它自己寫入的變動。→ 直接改資料庫檔的測資，必須在 App 停止時寫入、再冷啟動（`spec-tasks.md`「測資與讀取的約定」）。

**v3 新增的四條**（v2 驗收與之後的 RD 修正帶出來的）：

14. **資料庫檔被設成唯讀，在 Android 上造成的是「整個開不起來」，不是「只有寫入失敗」**（v2 驗收時 QA 在模擬器上實測：`Could not open the database in read/write mode`，讀取也一起失敗；恢復可寫之後資料都在）。→ v2 的 §5.2 拿「唯讀」當「寫不進去」的例子是錯的；「開不起來、但內容沒壞」原本沒有任何一條規定（v2 實作的樣子是抽屜默默變空、沒有提示），所以新增 §5.4，任務 5 驗收 2 的造法也要換。
15. **v2 之後的實作（commit `6b284d1`），仍把 Android 回報「開不了檔」的那一類錯誤算成「整份讀不起來」，會把資料庫刪掉重來。** 那一類錯誤不代表內容壞了（例如檔案權限不對）。**哪些情況會產生那一類錯誤，我沒有在裝置上確認過**；唯讀那一種產生的不是它，所以 v2 驗收沒有撞到。→ §5.4 規定判不出內容壞了時不得刪，任務 5 驗收 4 的第二種造法就是衝著這一點。
16. **引擎的「取消生成」只是發出請求**，原生的推論執行緒在取消之後還可能跑一小段；那段期間若切換模型、把模型關掉，App 會在原生程式裡閃退（v2 驗收時 QA 撞到一次；RD 修正前在「Qwen 串流中切到 SmolLM」上 3 次閃退 2 次）。RD 在 `6b284d1` 改成取消之後等推論真的停下來才讓出引擎，最多等 10 秒。→ 這是一個已修的閃退，重現案例要進每輪的驗收（任務 7 驗收 13）；等待本身可能讓「停止之後立刻再說話」變慢（任務 7 驗收 14）。這段程式也是 `stop-generation` 重驗的觸發條件（`spec-tasks.md`「明確不做」）。
17. **抽屜的歷史清單會記住上一次的捲動位置**（清單以對話 id 當鍵）。一段對話因為內容改變而移到最上面時，若上一次畫面最上面是別的列，它會落在畫面上方、看不到（v2 驗收 6 次有效切換裡 5 次如此）。RD 在 `6b284d1` 改成打開抽屜時一律回到最上面。→ §2.2、§2.3 的「一打開就在」要以「第一個畫面上看得到」判，驗收的前置要先把清單往下捲過（任務 2 驗收 3、4）。

---

# 行為規格

QA 主要照這一節寫測試。每一條都是「在什麼情況下、做了什麼、必須發生什麼」。

**本節的用語**：
- **儲存**：App 存對話的地方，不論它是什麼形式。
- **讀回來**：經由 App 取得的那一段對話（依 id 取、或取全部，兩條路都算）；裝置上則指冷啟動之後在抽屜與聊天畫面上看到的。
- **儲存的內容**：從 App 以外讀出來的每一段對話的每一個欄位與每一則訊息。**怎麼讀**：App 停止時直接唯讀資料庫檔（`spec-tasks.md`「測資與讀取的約定」）。
- **在裝置上判的條文，前置都可以先清空驗收裝置上這個 App 的使用者資料**（使用者已同意；模型檔保留）。

## §1 存下來的對話

**§1.1 讀回來的，就是存進去的。** 一段對話被存下之後，讀回來的每一樣東西都必須與存進去時相同：對話 id、人格、模型、建立時間、最後更新時間，以及每一則訊息的 id、作者、文字、建立時間與先後順序。

- **文字逐碼位相同。** 讀取時**不得**對文字做任何加工：不修復、不去前後空白、不把兩個字元的 `\n` 換成換行、不收合空白、不正規化。
- **讀回來的訊息沒有任何一則是「生成中」的樣子**（沒有打字指示器），即使它被存下的那一刻被標成生成中。
- 可判定（不碰資料庫；v2 依 D1 改寫，要驗的性質不變）：一段對話轉成「存進資料庫的形式」、再從那個形式轉回來 —— 經由「依 id 取」與「取全部」共用的那一段讀取規則 —— 與原本的**完全相等**。測資含：含換行與 tab 的文字、含 U+3000 與 U+00A0 的文字、含兩個字元 `\n`（反斜線加 n）與兩個反斜線的使用者訊息、👨‍👩‍👧 與 🇹🇼、前後帶空白的文字、長度 2,000 字元以上的文字、以 `…（已停止）` 結尾的文字、空字串。
- 可判定（在裝置上）：送出一則訊息、等回覆結束，結束 App 的行程再冷啟動 → 抽屜上那一列（如果它不是開著的那段）或聊天畫面上的那段，人格、模型、時間、每一則訊息的文字都與結束前相同。
- **為什麼要寫「不得加工」**：現行讀取會對每一則訊息再修復一次，那是為了本輪不再搬遷的舊檔（「這次會踩到的既有事實」第 4 條）。留著它，使用者打的 `C:\new` 重開 App 後會變成兩行 —— `docs/product/features.md` 聊天-14 承諾「你自己打的字怎麼打就怎麼顯示」。

**§1.2 一句話都沒說過的對話不留在儲存裡。** 存一段沒有任何使用者訊息的對話時，儲存裡不得因此多出一段；**儲存裡本來就有同一個 id 的那一段，要被移除**（`docs/specs/conversation-search/spec.md` §9.1「儲存一段空白對話等於刪檔，不是寫檔」與它的決策 J，本輪不改其語意）。
- 可判定：存一段只有開場白的對話 → 儲存裡沒有它；正向對照：存一段有使用者訊息的對話 → 儲存裡有它。
- 可判定：儲存裡已有一段只含助理訊息、id 為 X 的對話（從 App 以外寫進去的）→ 以同一個 id 存一段沒有使用者訊息的對話 → 儲存裡不再有 X。

**§1.3 刪掉就是真的刪掉，而且只刪那一段。** 刪除一段對話之後，依 id 取不到它、取全部裡沒有它、冷啟動之後抽屜與搜尋都找不到它；**其他每一段對話讀回來都與刪除前相同**。刪除一個不存在的 id 不出錯，也不動到任何一段。
- **由哪一層守（v2）**：裝置上的 `spec-tasks.md` 任務 7 驗收 7。D1 拍板後資料庫層沒有自動化測試；「刪除一個不存在的 id」在畫面上做不出來（刪除鈕只在清單上已存在的列），**知情不驗**，寫在「明確不做」的 D1 例外那一條。

**§1.4 一次存檔是整筆生效的。** 一段對話只要已經有一次存檔完整結束，此後任何時刻開始的讀取 —— 取全部、依 id 取一筆 —— **都必須包含它**，而且讀到的是**某一次存檔寫下的完整內容**。
- **不論當下有沒有別的存檔正在寫同一段對話、同時有幾個在寫**（「這次會踩到的既有事實」第 2 條）。
- 讀取不得因為有存檔在進行就略過這段、回報找不到、或回傳一部分。
- **本條要守的並發形狀**：同一段對話同時被存入**相同內容**兩次以上。同時存入**不同內容**的先後保證，本輪不定義（`spec-tasks.md`／「明確不做」）。
- 這是 H2 的吸收：舊的寫法「先把檔截成空的、再寫入」，讓另一個正在讀的人讀到空檔、把那段略過。
- **由哪一層守（v2，D1 拍板的結果）**：**沒有自動化測試，這是使用者開的例外。** 守衛是裝置上的 `spec-tasks.md` 任務 2 驗收 3（四個切換入口，每輪都跑）；另外由結構保證 —— RD 的存檔是單一指令（`spec-architecture.md` §B.1），沒有「多步驟沒包在交易裡」這種錯法。已知缺口與觸發條件在 `spec-tasks.md`「明確不做」的 D1 例外那一條。

**§1.5 一段讀不起來的對話，不得讓其他對話消失。** 儲存裡有一段對話的資料讀不起來時（例如某一則訊息的作者是一個不存在的值）：
- 取全部**照常結束**（不卡住、不重試到逾時），結果是其餘每一段對話；
- 依那一段的 id 取 → 找不到；依其他任一段的 id 取 → 取得到、內容正確；
- 冷啟動之後，抽屜與搜尋照常列出其餘每一段。
- **「依 id 取一筆」與「取全部再挑出同一個 id」對任何 id 都必須得到同一個答案，包含「兩邊都找不到」**（`docs/specs/conversation-search/spec.md` §9.3，本輪不改其語意）。
- **為什麼要寫**：換成資料庫之後，最自然的兩種寫法各自會打破一半 —— 一次把整張表映射成物件時，一筆壞資料會讓整份讀取失敗（整份歷史不見，`conversation-search` §9.2 要防的正是這個）；直接依 id 查詢則會繞過容錯（「這次會踩到的既有事實」第 6 條）。
- 這是 H3 的吸收，也是 `conversation-search` §9.2「一個讀不起來的對話檔，不得讓其他對話消失」在新儲存上的樣子。
- **由哪一層守（v2）**：不碰資料庫的 `spec-tasks.md` 任務 1 驗收 3（解析與「兩條讀取路徑同一個答案」都在純邏輯裡）；裝置上的任務 7 驗收 6。

**§1.6 儲存裡恰好是存下來的那些對話，不多不少。** 所有存檔都結束之後，儲存裡**每一段已存下、非空白、未被刪除的對話恰好一段**，沒有別的；抽屜上每段對話恰好一列、搜尋結果裡每段對話恰好一個分組。
- 可判定：同一段對話存兩次（第二次內容不同）→ 取全部裡它只有一段，內容是第二次的。
- 這是 H4 的吸收。
- **由哪一層守（v2）**：裝置上的任務 2 驗收 3（被切走的那段在清單上恰好一列 —— 那一段恰好是被存了兩次的那一段）、任務 7 驗收 4、9（儲存裡的對話數不變）。資料庫層沒有自動化測試（D1）。

## §2 歷史清單跟著儲存走

**§2.1 歷史清單 ＝ 儲存裡的所有對話 − 目前開著的那段，而且隨時是最新的。** 儲存有任何變動（任何一條路徑的存檔、刪除），或開著的那段換了，抽屜上的清單都必須反映**最新的**儲存與**最新的**開著的那段，**不需要任何其他動作**讓它重讀。
- 清單的順序與每一列的內容不變：依最後更新時間新到舊，每一列照 `docs/specs/conversation-search/spec.md` §5.2「抽屜必須有下面這些東西，行為如下」。
- **不得出現「某個時刻的舊清單，蓋掉了之後的變動」**：一段已存下的對話，只要它沒有被刪、也不是開著的那段，清單上就必須有它。
- **為什麼要寫成「隨時」**：清單若是「某一刻讀一次、存起來」，任何一次晚於那一刻的存檔都不會出現在清單上，直到下一次有別的動作觸發重讀 —— 那正是這個 bug 的第二個成因（「這次會踩到的既有事實」第 5 條）。

**§2.2 回覆還在生成時切換，被切走的那段一打開抽屜就在清單上。**（H1 的吸收，判法見 `spec-tasks.md` 任務 2 驗收 3）

- **前置**：引擎已就緒。開著一段對話 A，送出 `Write a very long detailed story about the sea, at least 600 words`（或任何會產生長回覆的訊息）。**在回覆已經出現文字、而且還在增加的時候**，做下面四種切換之一：

| 入口 | 操作 |
|---|---|
| 切換人格 | 右上角「換人」→ 選一個不同的人格 |
| 切換模型 | 抽屜 → 模型區點另一個模型 |
| 開始新的對話 | 抽屜 →「開始新的對話」 |
| 開啟另一段對話 | 抽屜 → 歷史清單點另一段既有對話 B |

- **預期**（切換之後**不刻意等待**，直接打開抽屜）：
  1. **打開抽屜的第一個畫面上、不做任何捲動，歷史清單最上面那一列就是 A**；清單裡 A **恰好一列**。（A 的內容在停止那一刻改變了，是清單上最新的一段。）**不論上一次打開抽屜時清單捲到哪裡，這一點都要成立。**
  2. 關上抽屜、**不做任何其他動作**、等 10 秒再打開 → 同樣不捲動，最上面那一列仍是 A，而且仍是一列。
  3. 從抽屜進入搜尋，查 `sea` → A 的分組出現。
  4. 從抽屜打開 A → 那則回覆留下切換當下已經顯示的文字，結尾是中斷標記（以 `docs/specs/stop-generation/spec.md` R2「留下的是「按下停止那一刻畫面上的文字」+ 一個固定的中斷標記」的現行定義為準）。
  5. 「開啟另一段對話」那一種：B 是開著的那段，**B 不在清單上**。
- **零文字的變體**：在回覆**還沒出現任何一個字**時切換 → 那則空回覆不留下（`stop-generation` R4），使用者剛送出的那句留著，所以 A 仍是一段非空白的對話 → 預期 1–3 同樣成立。
- **「立刻」的意思**：使用者切換之後打開抽屜所需的時間內就已經在。**不是**「等幾秒、或做了別的動作之後才出現」。
- **「在清單上」的意思（v3 補明）**：使用者一打開抽屜就**看得到**。資料上排在第一位、但被捲在畫面外、要往上捲才出現，**不算**（「這次會踩到的既有事實」第 17 條）—— 那對使用者來說就是「暫時不見、要做別的動作才看得到」。
- **這一條不規定**：沒有對話移到最上面時，打開抽屜要不要保留上一次的捲動位置。那由 RD 決定。

**§2.3 其他會改變儲存的動作，清單也立刻跟著變。** 不在生成中時切走一段有內容的對話 → 打開抽屜它就在清單上（它的內容沒變，不一定在最上面，可以捲動找到）；從抽屜刪掉一段 → 那一列消失；回覆結束後切走 → **打開抽屜的第一個畫面上、不做任何捲動，最上面那一列就是那段**（它的內容剛改變，是最新的一段；v3 補明，理由同 §2.2），而且預覽是完整的回覆。

## §3 儲存不是唯一的來源

**§3.1 還沒存下的東西仍然搜得到。** 搜尋看的是「使用者在畫面上看得到的一切」（`docs/specs/conversation-search/spec.md` §1.8「搜得到的必須等於畫面上看得到的」），**本輪不得改變這件事**。具體來說，下列東西此刻**不在儲存裡**，但必須搜得到：
- 剛切換人格、模型或開新對話產生的、只有開場白、從未存下的那段；
- 使用者已經送出、但回覆還沒結束（因此那一輪還沒存下）的那句話；
- 正在一個字一個字生成中的回覆，此刻已經顯示的部分。

**§3.2 同一段對話兩邊都有時，以記憶體那份為準。**（`docs/specs/conversation-search/spec.md` §3.5「同一段對話只能出現一次，且以記憶體那份為準」，本輪不改。）

- **為什麼這一節存在**：換成資料庫之後，最自然的設計是「清單與搜尋都直接讀資料庫」，那會讓 §3.1 的三樣東西全部消失。**使用者裁決：資料庫不能是唯一的來源。**

## §4 舊資料

**§4.1 不搬遷。** 舊版存在舊位置的對話，升級之後**不會出現在任何地方**：抽屜、搜尋、冷啟動續接都不會讀到它們。
- 升級後第一次啟動：抽屜顯示「還沒有其他對話。」；畫面是一段只有開場白的新對話，**人格與模型是「上次停在哪」記住的那一組**（它記住的那段舊對話已經不在，走的是「找不到就開新的」那條既有路徑）。
- **使用者知情接受的後果**：升級之後，原本的對話全部不見（`spec-tasks.md`／「明確不做」第一條）。

**§4.2 舊位置在每次啟動時被整個刪掉，而且只刪它。**
- App 每一次啟動之後，舊位置不存在（連同裡面的每一個檔）。
- **舊位置以外的東西一個都不動**：解壓出來的模型檔、解壓到一半的暫存檔、系統寫的標記檔、「上次停在哪」的偏好、本輪的新儲存，位元組全部與啟動前相同。
- 舊位置不存在時，什麼都不做、不出錯。
- **刪不掉時（例如權限不允許）不得影響啟動**：App 照常開起來、照常可用；下一次啟動再試一次。
- 舊位置裡的檔**不讀、不解析、不搬**，也不會因為它們而出現任何提示。
- **為什麼刪而不是留著**：理由與反方向的代價寫在 `../v1/spec-decisions.md`「本輪我自己做的判斷」第 1 項。

## §5 儲存壞掉、開不起來或寫不進去

**本節怎麼分（v3）**：看的是**儲存裡的內容本身還好不好**，不是錯誤發生在開檔還是讀寫。

| 情況 | 歸哪一條 | 原本的紀錄 |
|---|---|---|
| 內容本身壞了：檔案損毀、結構不認得 | §5.1 | 丟掉，重新開始 |
| 開不起來或讀不到，**而且判斷不出內容壞了**：例如檔案權限不對、被設成唯讀 | §5.4 | **不動** |
| 開得起來，但某一次存檔寫不進去：例如空間不足 | §5.2 | 不動 |
| 只有其中一段讀不起來 | §1.5 | 其餘照常 |

**§5.1 儲存整份讀不起來時，告知一次後重新開始（內容本身壞了：檔案損毀、結構不認得；不論是在啟動時還是使用途中發現）。**（v2 依使用者裁決 D3 選 (b) 寫定；v3 把「打不開」移出本條，改歸 §5.4。）
- **只有在內容確實壞了時才走本條。** 判斷不出內容壞了的任何開檔或讀取失敗，都走 §5.4，**不得丟掉原本的紀錄**。理由：丟掉是不能復原的，而 D3 的裁決與它的代價（「壞掉的資料沒有救回的機會」）講的是壞掉的資料；把沒壞的資料一起丟掉，是使用者沒有接受過的代價。
- App **不閃退**，聊天畫面照常出現；
- 模型照常載入，**已解壓的模型不重新解壓**；
- 可以在開著的那段送出訊息、收到回覆、按停止；
- 畫面上出現**一次**這段文字：**「之前的對話紀錄讀不出來，已經清空，從這裡重新開始。」**，至少停留 3 秒或直到使用者關掉它；同一次發現只出現一次，不會每次存檔都跳出來；
- **壞掉的那份不保留**：之後的抽屜只列出重新開始之後存下的對話（剛發現時是「還沒有其他對話。」）；
- **之後的對話照常存**：重新開始之後送出一則訊息、等回覆結束，再冷啟動 → 那段在，**而且不再出現那段提示**；
- 「上次停在哪」的偏好不被改動（它指的那段若已不在，走「找不到就用記住的人格與模型開新的」那條既有路徑）。
- **為什麼要特地寫「提示」**：Room 預設的開法遇到損毀會自己刪掉資料庫檔、不通知 App（「這次會踩到的既有事實」第 10 條）。只靠預設行為，使用者會看到一個突然空掉的抽屜，而不知道為什麼 —— 那正是使用者沒有選 (a)（默默重來）的理由。
- 選項、代價與裁決記在 `spec-appendix.md`／決策歷程「D3 拍板」。
- **由哪一層守**：裝置上的 `spec-tasks.md` 任務 5 驗收 1（啟動時發現的那一種）；「沒壞的不得走本條」由任務 5 驗收 4（開不起來時紀錄不被刪、不出現本條的提示）守。**「使用途中才發現」的那一種沒有驗收**：裝置上造不出可靠的時機，而 D1 之後沒有資料庫層的自動化測試 —— 知情留白，只有 `spec-architecture.md` §G.1 的建議在提醒。

**§5.2 一次存檔寫不進去時（例如手機空間不足）。**（v3 拿掉「儲存被設成唯讀」這個例子：在 Android 上它造成的是整個開不起來，歸 §5.4。）
- **本條也適用於 §5.4 那種狀態下的每一次存檔**：開不起來時存檔一定失敗，每一次失敗照本條提示。
- App **不閃退**；
- 畫面上出現一段看得見的文字：**「有一段對話沒能存下來。」**，至少停留 3 秒或直到使用者關掉它；
- 開著的那段內容仍在畫面上，可以繼續送出；
- 已經存下的其他對話不受影響（讀回來與之前相同）；
- 之後儲存恢復可寫時，下一次存檔照常成功。
- **沒有定義的部分（知情留白）**：寫不進去的那段，被切走之後不會出現在清單上（它不在儲存裡）。見 `spec-tasks.md`／「明確不做」。
- **由哪一層守（v3）**：裝置上的任務 5 驗收 2（盡力）。不閃退、提示、內容仍在畫面上可再送出、恢復後存檔成功這幾件，另由任務 5 驗收 4 在「開不起來」的狀態下判到；**「寫入失敗期間，已存的對話仍列在清單上」只有驗收 2 判得到**。「一次失敗的寫入不毀掉已存的」原本另有一條資料庫層的自動化測試，D1 拍板後移除，列為已知缺口（`spec-tasks.md`「明確不做」的 D1 例外那一條）。

**§5.3 一段讀不起來的對話** → 見 §1.5（不屬於「整份讀不起來」）。

**§5.4 儲存開不起來、但內容不一定壞了時，不刪、告知，下次啟動再試。**（v3 新增。）App 開不起來或讀不到儲存，而原因不是「內容本身壞了」（例如檔案權限不對、被設成唯讀）時：
- App **不閃退**，聊天畫面照常出現；**已解壓的模型不重新解壓**；
- 可以在開著的那段送出訊息、收到回覆、按停止；
- 畫面上出現**一次**這段文字：**「目前讀不到之前的對話紀錄（紀錄沒有被刪除），這段期間的對話也可能存不下來。」**，至少停留 3 秒或直到使用者關掉它；同一次啟動裡只出現一次；
- **不得出現 §5.1 的提示**（「…已經清空，從這裡重新開始。」）；
- 抽屜的歷史區在這段期間**不顯示「還沒有其他對話。」**，改顯示 **「目前讀不到之前的對話紀錄。」**（提示消失之後，使用者打開抽屜才不會以為紀錄不見了）；
- 這段期間每一次存檔失敗，照 §5.2 提示「有一段對話沒能存下來。」；
- **原本的紀錄不被刪除、不被改動**：從 App 以外讀出的儲存內容，與發生前相同；
- **下一次啟動再試**：阻礙排除之後冷啟動 → 原本的每一段對話都讀得回來（在抽屜上，或是冷啟動後直接開著的那段），內容與發生前相同；**不出現本條的提示，也不出現 §5.1 的提示**；之後送出的對話照常存。
- **阻礙沒有排除時**，每一次冷啟動都照上面再來一次（每次啟動提示一次）。
- **沒有定義的部分（知情留白）**：同一次執行中阻礙被排除時，要不要不必重啟就恢復。本輪只要求下一次啟動恢復（`spec-tasks.md`「明確不做」）。
- **為什麼不比照 §5.1 丟掉重來**：內容沒壞，丟掉就是把使用者完好的紀錄毀掉，而造成它的往往是會自己消失的狀況；代價與反方向在 `spec-decisions.md`「本輪（v3）我自己做的判斷」第 1 項。
- **由哪一層守**：裝置上的任務 5 驗收 4。

---

**接下去讀哪裡**：架構建議在 `spec-architecture.md`；任務與驗收、明確不做在 `spec-tasks.md`；待決事項（**目前 0 項**）在 `spec-decisions.md`；查證紀錄、跨輪衝突、決策歷程在 `spec-appendix.md`。
